--- a/_posts/2022-01-06-cats.md
+++ b/_posts/2022-01-06-cats.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: page
 title: Cats
 published: true
 tags: link cats
@@ -9,11 +9,11 @@ Images of cats I find on the internet
 
 
 
-<img src="../assets/Cats/Van_Cat.bmp" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Quantum_Cat.jpg" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Santa_Cat.jpg" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Beer_Cat.jpg" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Dont_Mess_Cat.webp" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Beanie_Cat.jpg" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Smokey_Cat.jpg" width="200" style="float:left; margin-right:20px;">
-<img src="../assets/Cats/Seal_Cat.jpg" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Van_Cat.bmp" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Quantum_Cat.jpg" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Santa_Cat.jpg" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Beer_Cat.jpg" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Dont_Mess_Cat.webp" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Beanie_Cat.jpg" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Smokey_Cat.jpg" width="200" style="float:left; margin-right:20px;">
+<img src="assets/Cats/Seal_Cat.jpg" width="200" style="float:left; margin-right:20px;">
