--- a/_posts/2022-02-17-ChemDraw.md
+++ b/_posts/2022-02-17-ChemDraw.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: How to Access Chemdraw for Students
-tags: "how to" "ChemDraw"
+tags: [how to , ChemDraw]
 published: true
 ---
 
@@ -16,3 +16,4 @@ Although the program is propriety, students at the University of Canterbury (and
 5. Install 
 6. Use the code found on the purchases page to sign up during the install process
 7. Enjoy
+
