--- a/_posts/2022-02-18-Fusion360.md
+++ b/_posts/2022-02-18-Fusion360.md
@@ -13,3 +13,5 @@ categories:
 ---
 
 Hopefully this works
+
+<a href="https://www.autodesk.com/campaigns/education/fusion-360"> Link to Fusion 360 signup page </a>
