--- a/_posts/2022-02-16-Fusion360.md
+++ b/_posts/2022-02-16-Fusion360.md
@@ -8,8 +8,8 @@ summary: |
  mean.
 tags: azure storage io
 categories:
-  - Azure
-  - Tech Tips
+  - How To
+  - Software
 ---
 
 Hopefully this works
