update with placeholders

--- a/_posts/2022-02-16-Fusion360.md
+++ b/_posts/2022-02-16-Fusion360.md
@@ -12,6 +12,6 @@ categories:
   - Software
 ---
 
-Hopefully this works
+<span style="color:blue">Still being written</span>.
 
 <a href="https://www.autodesk.com/campaigns/education/fusion-360"> Link to Fusion 360 signup page </a>
